@startuml

title __IMPL's Class Diagram__\n

  package  {
    package com.adminportal {
      package com.adminportal.service {
        package com.adminportal.service.impl {
          class BookServiceImpl {
              + save()
              + findAll()
              + findOne()
              + removeOne()
          }
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.service {
        package com.adminportal.service.impl {
          class UserSecurityService {
              + loadUserByUsername()
          }
        }
      }
    }
  }
  

  package  {
    package com.adminportal {
      package com.adminportal.service {
        package com.adminportal.service.impl {
          class UserServiceImpl {
              {static} - LOG : Logger
              + createUser()
              + save()
          }
        }
      }
    }
  }
  

  BookServiceImpl -up-|> BookService
  BookServiceImpl o-- BookRepository : bookRepository
  UserSecurityService -up-|> UserDetailsService
  UserSecurityService o-- UserRepository : userRepository
  UserServiceImpl -up-|> UserService
  UserServiceImpl o-- UserRepository : userRepository
  UserServiceImpl o-- RoleRepository : roleRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
